bin_PROGRAMS = osmconvert osmfilter osmupdate osmchange pbftoosm osmrelpoly osmassignpoly osmgeobase osmposition

osmconvert_SOURCES = osmconvert.c
osmconvert_LDFLAGS = 
osmconvert_LDADD = -lz

osmfilter_SOURCES = osmfilter.c

osmupdate_SOURCES = osmupdate.c

pbftoosm_SOURCES = pbftoosm.c
pbftoosm_LDADD = -lz


